tests/data/custom-annotations/mergeable/annotations-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custom-annotations-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
    custom.nginx.org/feature-a: "on"
    custom.nginx.org/feature-b: "512"
    custom.nginx.org/test-split-feature: "  master.ip--master"
spec:
  rules:
  - host: custom-annotations.example.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custom-annotations-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    custom.nginx.org/test-split-feature: "  minion1"
spec:
  rules:
  - host: custom-annotations.example.com
    http:
      paths:
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custom-annotations-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    custom.nginx.org/test-split-feature: "minion2  "
spec:
  rules:
  - host: custom-annotations.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
